# peetcs

./: CMakeLists.txt  README.md  ecs.hpp  imgui.ini  main.cpp
Assets/models/: claw.mtl
CMake/AddProjectMacro/: LICENSE  Macros.cmake  README.md
CMakeGen/: CMakeLists.template
include/: archetype_block.hpp  archetype_id.hpp  archetype_pool.hpp  dll_macros.hpp  generic_container.hpp  peetcs.hpp  peetcs_types.hpp  query_value.hpp  storage.hpp  utilities.hpp
include/app/: app.hpp
include/phesycs/: phesycs.hpp
include/pipo/: imgui.hpp  rasterizer.hpp
src/: archetype_block.cpp  archetype_id.cpp  archetype_pool.cpp  generic_container.cpp  query_value.cpp  shared.cpp  storage.cpp
src/app/: app.cpp
src/phesycs/: phesycs.cpp  shared.cpp
src/pipo/: imgui.cpp  rasterizer.cpp
tests/: shared.hpp  unit_tests.hpp
